加入资源模块，优化通知等
